--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,18 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.658.1",
     "@aws-sdk/lib-dynamodb": "^3.658.1",
+    "@clerk/clerk-sdk-node": "^5.0.50",
+    "@vercel/postgres": "^0.7.2",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.3",
     "pg": "^8.13.0",
     "serverless-http": "^3.2.0",
-    "@vercel/postgres": "^0.7.2"
+    "svix": "^1.37.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
